--- a/runsim/basic_multi/topology.properties
+++ b/runsim/basic_multi/topology.properties
@@ -1,9 +1,11 @@
 num_nodes=5
-num_undirected_edges=5
+num_undirected_edges=4
+# num_undirected_edges=5
 switches=set(0,1,2,3,4)
 switches_which_are_tors=set(0,2,3,4)
 servers=set()
-undirected_edges=set(0-1,0-2,1-2,1-3,1-4)
+undirected_edges=set(0-1,1-2,1-3,1-4)
+# undirected_edges=set(0-1,0-2,1-2,1-3,1-4)
 link_channel_delay_ns=10000
 link_device_data_rate_megabit_per_s=100
 link_device_queue=drop_tail(100p)
